implement login step 1

--- a/cmd/index.html
+++ b/cmd/index.html
@@ -94,11 +94,7 @@
         return [username, password];
     }
 
-    function login(e) {
-        e.preventDefault();
-    }
-
-    function registerStep1(username, password) {
+    function craftBlindSaltRequest(username, password) {
         // generate blind salt
         let salt = sodium.crypto_generichash(64, sodium.from_string(password), sodium.from_string(serverID));
         salt = sodium.crypto_core_ristretto255_from_hash(salt);
@@ -114,9 +110,8 @@
         return [request, mask];
     }
 
-    function registerStep2(username, password, mask, salt, blob) {
+    function deriveSecrets(password, mask, salt) {
         salt = sodium.from_base64(salt);
-
         if (!sodium.crypto_core_ristretto255_is_valid_point(salt)) {
             throw "invalid salt";
         }
@@ -125,7 +120,7 @@
         blindSalt = sodium.crypto_generichash(sodium.crypto_pwhash_SALTBYTES, blindSalt, sodium.from_string(serverID));
 
         let keyMaterial = sodium.crypto_pwhash(64, sodium.from_string(password), blindSalt,
-            sodium.crypto_pwhash_OPSLIMIT_INTERACTIVE, sodium.crypto_pwhash_MEMLIMIT_MODERATE, sodium.crypto_pwhash_ALG_DEFAULT);
+            sodium.crypto_pwhash_OPSLIMIT_INTERACTIVE, sodium.crypto_pwhash_MEMLIMIT_INTERACTIVE, sodium.crypto_pwhash_ALG_DEFAULT);
 
         let generator = sodium.crypto_generichash(sodium.crypto_core_ristretto255_HASHBYTES,
             keyMaterial, sodium.from_string(generatorModifier));
@@ -138,29 +133,38 @@
         sodium.memzero(keyMaterial);
 
         let publicKey = sodium.crypto_scalarmult_ristretto255(privateKey, generator);
-        sodium.memzero(privateKey);
 
         return {
-            "username": username,
             "generator": sodium.to_base64(generator),
             "publicKey": sodium.to_base64(publicKey),
+            "privateKey": sodium.to_base64(privateKey),
+        };
+    }
+
+    function craftRegisterRequest(username, password, mask, salt, blob) {
+        let secrets = deriveSecrets(password, mask, salt);
+        console.log(secrets);
+        return {
+            "username": username,
+            "generator": secrets.generator,
+            "publicKey": secrets.publicKey,
             "blob": blob,
         };
     }
 
     async function register(e) {
         e.preventDefault();
+        document.getElementById('statusMessage').innerText = "";
         try {
             let [username, password] = credentials();
             console.log('register ' + username + " " + password);
-            let [request1, mask] = registerStep1(username, password)
-            console.log("mask:", sodium.to_base64(mask));
+            let [request1, mask] = craftBlindSaltRequest(username, password)
             let resp = await fetch("/register/step1", {
                 method: "POST",
                 body: JSON.stringify(request1),
             });
             let respJson = await resp.json();
-            let request2 = registerStep2(username, password, mask, respJson.salt, respJson.blob);
+            let request2 = craftRegisterRequest(username, password, mask, respJson.salt, respJson.blob);
             resp = await fetch("/register/step2", {
                 method: "POST",
                 body: JSON.stringify(request2),
@@ -168,6 +172,28 @@
             respJson = await resp.json();
             document.getElementById('statusMessage').innerText = respJson.status;
         } catch (e) {
+            console.log(e);
+            document.getElementById('statusMessage').innerText = "An error occurred";
+        }
+    }
+
+    async function login(e) {
+        e.preventDefault();
+        document.getElementById('statusMessage').innerText = "";
+        try {
+            let [username, password] = credentials();
+            console.log('register ' + username + " " + password);
+            let [request1, mask] = craftBlindSaltRequest(username, password)
+            console.log("mask:", sodium.to_base64(mask));
+            let resp = await fetch("/login/step1", {
+                method: "POST",
+                body: JSON.stringify(request1),
+            });
+            let respJson = await resp.json();
+            let secrets = deriveSecrets(password, mask, respJson.salt);
+            console.log(secrets);
+        } catch (e) {
+            console.log(e);
             document.getElementById('statusMessage').innerText = "An error occurred";
         }
     }
