implement login step 2 for client side

--- a/cmd/index.html
+++ b/cmd/index.html
@@ -81,6 +81,9 @@
     const serverID = "test server";
     const generatorModifier = "generator modifier";
     const privateKeyModifier = "private key modifier";
+    const clientVerifierModifier = "client verifier modifier";
+    const sessionKeyModifier = "session key modifier";
+    const sessionIVModifier = "session IV modifier";
     let sodium = undefined;
     window.sodium = {
         onload: function (sodium_) {
@@ -135,9 +138,9 @@
         let publicKey = sodium.crypto_scalarmult_ristretto255(privateKey, generator);
 
         return {
-            "generator": sodium.to_base64(generator),
-            "publicKey": sodium.to_base64(publicKey),
-            "privateKey": sodium.to_base64(privateKey),
+            "generator": generator,
+            "publicKey": publicKey,
+            "privateKey": privateKey,
         };
     }
 
@@ -146,10 +149,38 @@
         console.log(secrets);
         return {
             "username": username,
-            "generator": secrets.generator,
-            "publicKey": secrets.publicKey,
+            "generator": sodium.to_base64(secrets.generator),
+            "publicKey": sodium.to_base64(secrets.publicKey),
             "blob": blob,
         };
+    }
+
+    function craftLoginRequest(username, password, mask, salt, blob, publicKey) {
+        let serverPublicKey = sodium.from_base64(publicKey);
+        if (!sodium.crypto_core_ristretto255_is_valid_point(serverPublicKey)) {
+            throw "invalid ephemeral public key";
+        }
+
+        let secrets = deriveSecrets(password, mask, salt);
+        let ephemeralSecret = sodium.crypto_core_ristretto255_scalar_random();
+        let ephemeralPublic = sodium.crypto_scalarmult_ristretto255_base(ephemeralSecret);
+        let sharedSecret = new Uint8Array(sodium.crypto_core_ristretto255_BYTES * 2);
+        sharedSecret.set(sodium.crypto_scalarmult_ristretto255(ephemeralSecret, serverPublicKey));
+        sharedSecret.set(sodium.crypto_scalarmult_ristretto255(secrets.privateKey, serverPublicKey), sodium.crypto_core_ristretto255_BYTES);
+        sharedSecret = sodium.crypto_generichash(64, serverID, sharedSecret);
+
+        let verifierC = sodium.crypto_generichash(32, sharedSecret, sodium.from_string(clientVerifierModifier));
+        let sessionKey = sodium.crypto_generichash(sodium.crypto_aead_xchacha20poly1305_ietf_KEYBYTES, sharedSecret, sodium.from_string(sessionKeyModifier));
+        let iv = sodium.crypto_generichash(sodium.crypto_aead_xchacha20poly1305_ietf_NPUBBYTES, sharedSecret, sodium.from_string(sessionIVModifier));
+
+        let request = {
+            "username": username,
+            "blob": blob,
+            "ephemeralPublic": sodium.to_base64(ephemeralPublic),
+            "verifier": sodium.to_base64(verifierC),
+        };
+
+        return [request, sessionKey, iv];
     }
 
     async function register(e) {
@@ -189,9 +220,19 @@
                 method: "POST",
                 body: JSON.stringify(request1),
             });
+
             let respJson = await resp.json();
-            let secrets = deriveSecrets(password, mask, respJson.salt);
-            console.log(secrets);
+            let [request2, key, iv] = craftLoginRequest(username, password, mask, respJson.salt, respJson.blob, respJson.publicKey);
+
+            console.log("key:", sodium.to_base64(key));
+            console.log("iv:", sodium.to_base64(iv));
+
+            resp = await fetch("/login/step2", {
+                method: "POST",
+                body: JSON.stringify(request2),
+            });
+            respJson = await resp.json();
+            document.getElementById('statusMessage').innerText = respJson.status;
         } catch (e) {
             console.log(e);
             document.getElementById('statusMessage').innerText = "An error occurred";
